<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/layout_margin_small">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/steps_content_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_padding_small"
        android:layout_marginStart="@dimen/layout_margin_small"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_text" />

        <TextView
            android:id="@+id/tv_step_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_short_dscrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/step_number" />
    </LinearLayout>

</LinearLayout>